sources/y.output
Terminals which are not used

   tVOID
   tPOINT
   tIF
   tWHILE
   tFOR
   tCOMPARE
   tMODULO
   tSHORT
   tLONG
   tSIGNED
   tUNSIGNED
   tSTATIC
   tTRUE
   tFALSE


Grammar

    0 $accept: s $end

    1 s: tINT tMAIN tOP tCP tOB BODY tRETURN INT tPV tCB

    2 INT: tVAR
    3    | tNUMBER

    4 BODY: CreateVAR BODY
    5     | Affectation BODY
    6     | tPRINTF tOP tVAR tCP tPV BODY
    7     | /* empty */

    8 TYPE: tINT
    9     | tBOOL
   10     | tFLOAT
   11     | tDOUBLE

   12 CreateVAR: TYPE tVAR tPV
   13          | TYPE tVAR tAFFECT tNUMBER tPV
   14          | TYPE tVAR tVIRGULE SuiteVar

   15 SuiteVar: tVAR tVIRGULE SuiteVar
   16         | tVAR tPV

   17 Affectation: tVAR tAFFECT tNUMBER tPV
   18            | tVAR tAFFECT OPERATION tPV

   19 OPERATION: T1 tADD T1
   20          | T1 tMUL T1
   21          | T1 tDIV T1
   22          | T1 tSUB T1

   23 T1: tOP T1 tCP
   24   | tNUMBER
   25   | tVAR
   26   | OPERATION


Terminals, with rules where they appear

$end (0) 0
error (256)
tNUMBER (258) 3 13 17 24
tVAR (259) 2 6 12 13 14 15 16 17 18 25
tMAIN (260) 1
tVOID (261)
tOB (262) 1
tOP (263) 1 6 23
tCB (264) 1
tCP (265) 1 6 23
tPV (266) 1 6 12 13 16 17 18
tVIRGULE (267) 14 15
tPOINT (268)
tINT (269) 1 8
tFLOAT (270) 10
tBOOL (271) 9
tPRINTF (272) 6
tIF (273)
tWHILE (274)
tFOR (275)
tRETURN (276) 1
tCOMPARE (277)
tAFFECT (278) 13 17 18
tADD (279) 19
tMUL (280) 20
tSUB (281) 22
tDIV (282) 21
tMODULO (283)
tDOUBLE (284) 11
tSHORT (285)
tLONG (286)
tSIGNED (287)
tUNSIGNED (288)
tSTATIC (289)
tTRUE (290)
tFALSE (291)


Nonterminals, with rules where they appear

$accept (37)
    on left: 0
s (38)
    on left: 1, on right: 0
INT (39)
    on left: 2 3, on right: 1
BODY (40)
    on left: 4 5 6 7, on right: 1 4 5 6
TYPE (41)
    on left: 8 9 10 11, on right: 12 13 14
CreateVAR (42)
    on left: 12 13 14, on right: 4
SuiteVar (43)
    on left: 15 16, on right: 14 15
Affectation (44)
    on left: 17 18, on right: 5
OPERATION (45)
    on left: 19 20 21 22, on right: 18 26
T1 (46)
    on left: 23 24 25 26, on right: 19 20 21 22 23


state 0

    0 $accept: . s $end

    tINT  shift, and go to state 1

    s  go to state 2


state 1

    1 s: tINT . tMAIN tOP tCP tOB BODY tRETURN INT tPV tCB

    tMAIN  shift, and go to state 3


state 2

    0 $accept: s . $end

    $end  shift, and go to state 4


state 3

    1 s: tINT tMAIN . tOP tCP tOB BODY tRETURN INT tPV tCB

    tOP  shift, and go to state 5


state 4

    0 $accept: s $end .

    $default  accept


state 5

    1 s: tINT tMAIN tOP . tCP tOB BODY tRETURN INT tPV tCB

    tCP  shift, and go to state 6


state 6

    1 s: tINT tMAIN tOP tCP . tOB BODY tRETURN INT tPV tCB

    tOB  shift, and go to state 7


state 7

    1 s: tINT tMAIN tOP tCP tOB . BODY tRETURN INT tPV tCB

    tVAR     shift, and go to state 8
    tINT     shift, and go to state 9
    tFLOAT   shift, and go to state 10
    tBOOL    shift, and go to state 11
    tPRINTF  shift, and go to state 12
    tDOUBLE  shift, and go to state 13

    $default  reduce using rule 7 (BODY)

    BODY         go to state 14
    TYPE         go to state 15
    CreateVAR    go to state 16
    Affectation  go to state 17


state 8

   17 Affectation: tVAR . tAFFECT tNUMBER tPV
   18            | tVAR . tAFFECT OPERATION tPV

    tAFFECT  shift, and go to state 18


state 9

    8 TYPE: tINT .

    $default  reduce using rule 8 (TYPE)


state 10

   10 TYPE: tFLOAT .

    $default  reduce using rule 10 (TYPE)


state 11

    9 TYPE: tBOOL .

    $default  reduce using rule 9 (TYPE)


state 12

    6 BODY: tPRINTF . tOP tVAR tCP tPV BODY

    tOP  shift, and go to state 19


state 13

   11 TYPE: tDOUBLE .

    $default  reduce using rule 11 (TYPE)


state 14

    1 s: tINT tMAIN tOP tCP tOB BODY . tRETURN INT tPV tCB

    tRETURN  shift, and go to state 20


state 15

   12 CreateVAR: TYPE . tVAR tPV
   13          | TYPE . tVAR tAFFECT tNUMBER tPV
   14          | TYPE . tVAR tVIRGULE SuiteVar

    tVAR  shift, and go to state 21


state 16

    4 BODY: CreateVAR . BODY

    tVAR     shift, and go to state 8
    tINT     shift, and go to state 9
    tFLOAT   shift, and go to state 10
    tBOOL    shift, and go to state 11
    tPRINTF  shift, and go to state 12
    tDOUBLE  shift, and go to state 13

    $default  reduce using rule 7 (BODY)

    BODY         go to state 22
    TYPE         go to state 15
    CreateVAR    go to state 16
    Affectation  go to state 17


state 17

    5 BODY: Affectation . BODY

    tVAR     shift, and go to state 8
    tINT     shift, and go to state 9
    tFLOAT   shift, and go to state 10
    tBOOL    shift, and go to state 11
    tPRINTF  shift, and go to state 12
    tDOUBLE  shift, and go to state 13

    $default  reduce using rule 7 (BODY)

    BODY         go to state 23
    TYPE         go to state 15
    CreateVAR    go to state 16
    Affectation  go to state 17


state 18

   17 Affectation: tVAR tAFFECT . tNUMBER tPV
   18            | tVAR tAFFECT . OPERATION tPV

    tNUMBER  shift, and go to state 24
    tVAR     shift, and go to state 25
    tOP      shift, and go to state 26

    OPERATION  go to state 27
    T1         go to state 28


state 19

    6 BODY: tPRINTF tOP . tVAR tCP tPV BODY

    tVAR  shift, and go to state 29


state 20

    1 s: tINT tMAIN tOP tCP tOB BODY tRETURN . INT tPV tCB

    tNUMBER  shift, and go to state 30
    tVAR     shift, and go to state 31

    INT  go to state 32


state 21

   12 CreateVAR: TYPE tVAR . tPV
   13          | TYPE tVAR . tAFFECT tNUMBER tPV
   14          | TYPE tVAR . tVIRGULE SuiteVar

    tPV       shift, and go to state 33
    tVIRGULE  shift, and go to state 34
    tAFFECT   shift, and go to state 35


state 22

    4 BODY: CreateVAR BODY .

    $default  reduce using rule 4 (BODY)


state 23

    5 BODY: Affectation BODY .

    $default  reduce using rule 5 (BODY)


state 24

   17 Affectation: tVAR tAFFECT tNUMBER . tPV
   24 T1: tNUMBER .

    tPV  shift, and go to state 36

    $default  reduce using rule 24 (T1)


state 25

   25 T1: tVAR .

    $default  reduce using rule 25 (T1)


state 26

   23 T1: tOP . T1 tCP

    tNUMBER  shift, and go to state 37
    tVAR     shift, and go to state 25
    tOP      shift, and go to state 26

    OPERATION  go to state 38
    T1         go to state 39


state 27

   18 Affectation: tVAR tAFFECT OPERATION . tPV
   26 T1: OPERATION .

    tPV  shift, and go to state 40

    $default  reduce using rule 26 (T1)


state 28

   19 OPERATION: T1 . tADD T1
   20          | T1 . tMUL T1
   21          | T1 . tDIV T1
   22          | T1 . tSUB T1

    tADD  shift, and go to state 41
    tMUL  shift, and go to state 42
    tSUB  shift, and go to state 43
    tDIV  shift, and go to state 44


state 29

    6 BODY: tPRINTF tOP tVAR . tCP tPV BODY

    tCP  shift, and go to state 45


state 30

    3 INT: tNUMBER .

    $default  reduce using rule 3 (INT)


state 31

    2 INT: tVAR .

    $default  reduce using rule 2 (INT)


state 32

    1 s: tINT tMAIN tOP tCP tOB BODY tRETURN INT . tPV tCB

    tPV  shift, and go to state 46


state 33

   12 CreateVAR: TYPE tVAR tPV .

    $default  reduce using rule 12 (CreateVAR)


state 34

   14 CreateVAR: TYPE tVAR tVIRGULE . SuiteVar

    tVAR  shift, and go to state 47

    SuiteVar  go to state 48


state 35

   13 CreateVAR: TYPE tVAR tAFFECT . tNUMBER tPV

    tNUMBER  shift, and go to state 49


state 36

   17 Affectation: tVAR tAFFECT tNUMBER tPV .

    $default  reduce using rule 17 (Affectation)


state 37

   24 T1: tNUMBER .

    $default  reduce using rule 24 (T1)


state 38

   26 T1: OPERATION .

    $default  reduce using rule 26 (T1)


state 39

   19 OPERATION: T1 . tADD T1
   20          | T1 . tMUL T1
   21          | T1 . tDIV T1
   22          | T1 . tSUB T1
   23 T1: tOP T1 . tCP

    tCP   shift, and go to state 50
    tADD  shift, and go to state 41
    tMUL  shift, and go to state 42
    tSUB  shift, and go to state 43
    tDIV  shift, and go to state 44


state 40

   18 Affectation: tVAR tAFFECT OPERATION tPV .

    $default  reduce using rule 18 (Affectation)


state 41

   19 OPERATION: T1 tADD . T1

    tNUMBER  shift, and go to state 37
    tVAR     shift, and go to state 25
    tOP      shift, and go to state 26

    OPERATION  go to state 38
    T1         go to state 51


state 42

   20 OPERATION: T1 tMUL . T1

    tNUMBER  shift, and go to state 37
    tVAR     shift, and go to state 25
    tOP      shift, and go to state 26

    OPERATION  go to state 38
    T1         go to state 52


state 43

   22 OPERATION: T1 tSUB . T1

    tNUMBER  shift, and go to state 37
    tVAR     shift, and go to state 25
    tOP      shift, and go to state 26

    OPERATION  go to state 38
    T1         go to state 53


state 44

   21 OPERATION: T1 tDIV . T1

    tNUMBER  shift, and go to state 37
    tVAR     shift, and go to state 25
    tOP      shift, and go to state 26

    OPERATION  go to state 38
    T1         go to state 54


state 45

    6 BODY: tPRINTF tOP tVAR tCP . tPV BODY

    tPV  shift, and go to state 55


state 46

    1 s: tINT tMAIN tOP tCP tOB BODY tRETURN INT tPV . tCB

    tCB  shift, and go to state 56


state 47

   15 SuiteVar: tVAR . tVIRGULE SuiteVar
   16         | tVAR . tPV

    tPV       shift, and go to state 57
    tVIRGULE  shift, and go to state 58


state 48

   14 CreateVAR: TYPE tVAR tVIRGULE SuiteVar .

    $default  reduce using rule 14 (CreateVAR)


state 49

   13 CreateVAR: TYPE tVAR tAFFECT tNUMBER . tPV

    tPV  shift, and go to state 59


state 50

   23 T1: tOP T1 tCP .

    $default  reduce using rule 23 (T1)


state 51

   19 OPERATION: T1 . tADD T1
   19          | T1 tADD T1 .
   20          | T1 . tMUL T1
   21          | T1 . tDIV T1
   22          | T1 . tSUB T1

    tMUL  shift, and go to state 42
    tDIV  shift, and go to state 44

    $default  reduce using rule 19 (OPERATION)


state 52

   19 OPERATION: T1 . tADD T1
   20          | T1 . tMUL T1
   20          | T1 tMUL T1 .
   21          | T1 . tDIV T1
   22          | T1 . tSUB T1

    $default  reduce using rule 20 (OPERATION)


state 53

   19 OPERATION: T1 . tADD T1
   20          | T1 . tMUL T1
   21          | T1 . tDIV T1
   22          | T1 . tSUB T1
   22          | T1 tSUB T1 .

    tMUL  shift, and go to state 42
    tDIV  shift, and go to state 44

    $default  reduce using rule 22 (OPERATION)


state 54

   19 OPERATION: T1 . tADD T1
   20          | T1 . tMUL T1
   21          | T1 . tDIV T1
   21          | T1 tDIV T1 .
   22          | T1 . tSUB T1

    $default  reduce using rule 21 (OPERATION)


state 55

    6 BODY: tPRINTF tOP tVAR tCP tPV . BODY

    tVAR     shift, and go to state 8
    tINT     shift, and go to state 9
    tFLOAT   shift, and go to state 10
    tBOOL    shift, and go to state 11
    tPRINTF  shift, and go to state 12
    tDOUBLE  shift, and go to state 13

    $default  reduce using rule 7 (BODY)

    BODY         go to state 60
    TYPE         go to state 15
    CreateVAR    go to state 16
    Affectation  go to state 17


state 56

    1 s: tINT tMAIN tOP tCP tOB BODY tRETURN INT tPV tCB .

    $default  reduce using rule 1 (s)


state 57

   16 SuiteVar: tVAR tPV .

    $default  reduce using rule 16 (SuiteVar)


state 58

   15 SuiteVar: tVAR tVIRGULE . SuiteVar

    tVAR  shift, and go to state 47

    SuiteVar  go to state 61


state 59

   13 CreateVAR: TYPE tVAR tAFFECT tNUMBER tPV .

    $default  reduce using rule 13 (CreateVAR)


state 60

    6 BODY: tPRINTF tOP tVAR tCP tPV BODY .

    $default  reduce using rule 6 (BODY)


state 61

   15 SuiteVar: tVAR tVIRGULE SuiteVar .

    $default  reduce using rule 15 (SuiteVar)
